20-11-2021:
* All createView() functions inside specific views now get a input and return a value. This is for better error handeling when scaling.
* Further improvements on the post class.
* made contentView less of a mess and it should now be more in line with the Single-responsibility principle.
* Further documentation of so far undocumented or not specifically documented functions.

20-11-2021 C2:
* Removed redundant code.
* Made sure DB connection is closed everywhere after usage.
* Made sure every die() has a logError.
* Made sure every DB exceptions throws a custom DB exception.

21-11-2021
* Further work on secondarySubjectPage
* secondary subject titles in subjects/home page now link to secondarySubjectPage
* secondary subject titles in primarySubjectsPage now link to secondarySubjectPage
* Updated gitignore

21-11-2021 v2:
* Fixed a bug causing the page to resize after certain actions
* Changed the way alertView is getting called by both the registerModel and loginModel. They both now call the controller when only requiring a alert to be shown.
* Increase in documentation
* 